fix layout collapse

--- a/style/main.css
+++ b/style/main.css
@@ -47,7 +47,7 @@
 
 .motto {
     color: #101010;
-    font-size: 10vw;
+    font-size: 8vw;
     font-family:'Hiragino Sans','游ゴシック Light',sans-serif;
     animation-duration: 3s;
     animation-name: fadeIn;
